# bauman_quest_bot

./: .env  pyproject.toml
src/: commands.csv  events.csv  main.py
